Fix size of carousel buttons
- Next and Prev buttons were too small to click easily

--- a/assets/sass/_base.sass
+++ b/assets/sass/_base.sass
@@ -126,7 +126,14 @@ hr
     text-transform: uppercase
     font-size: 14px
 
+.owl-nav
+    height: 50px
 
+.owl-next, .owl-prev
+    height: 30px
+    span
+        font-size: 3rem
+        line-height: 30px
 
 .footer-text
     font-size: 0.8em
